--- a/InnoClinic.OfficesAPI/API/Properties/launchSettings.json
+++ b/InnoClinic.OfficesAPI/API/Properties/launchSettings.json
@@ -2,11 +2,7 @@
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:48883",
-      "sslPort": 44351
-    }
+    "anonymousAuthentication": true
   },
   "profiles": {
     "http": {
