--- a/InnoClinic.OfficesAPI/API/Properties/launchSettings.json
+++ b/InnoClinic.OfficesAPI/API/Properties/launchSettings.json
@@ -29,13 +29,5 @@
       }
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:59460/",
-      "sslPort": 44364
-    }
-  }
+  "$schema": "http://json.schemastore.org/launchsettings.json"
 }
