--- a/InnoClinic.OfficesAPI/API/appsettings.json
+++ b/InnoClinic.OfficesAPI/API/appsettings.json
@@ -7,7 +7,8 @@
     },
     "ConnectionStrings": {
         "MongoDb": "mongodb+srv://IvanKurykin:fgEXRXEipAtlYHfm@ivankuryikin.lxhtmdr.mongodb.net/OfficeAPIDatabase?retryWrites=true&w=majority&appName=IvanKuryikin",
-        "DatabaseName": "OfficeAPIDatabase"
+        "DatabaseName": "OfficeAPIDatabase",
+        "GridFSBucketName": "photos"
     },
     "AllowedHosts": "*"
 }
