--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Offices API Build
+name: Authorization Service CI
 
 on:
   push:
@@ -11,13 +11,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
       - name: Setup .NET 8
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
-          
-      - name: Restore and Build
-        run: |
-          dotnet restore InnoClinic.OfficesAPI/InnoClinic.OfficesAPI.sln -p:Configuration=Release
-          dotnet build InnoClinic.OfficesAPI/InnoClinic.OfficesAPI.sln --configuration Release --no-restore
+      - name: Restore dependencies
+        run: dotnet restore InnoClinic.OfficesAPI/InnoClinic.OfficesAPI.sln -p:Configuration=Release
+      - name: Build
+        run: dotnet build InnoClinic.OfficesAPI/InnoClinic.OfficesAPI.sln --configuration Release
+      - name: Test
+        run: dotnet test InnoClinic.OfficesAPI/InnoClinic.OfficesAPI.sln --no-build --verbosity normal --configuration Release
+
+  analyze:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup .NET 8
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Sonar Scan
+        uses: highbyte/sonarscan-dotnet@v2.3.0
+        with:
+          sonarProjectKey: ${{ secrets.SONAR_PROJECT_KEY }}
+          sonarProjectName: ${{ secrets.SONAR_PROJECT_NAME }}
+          sonarOrganization: ${{ secrets.SONAR_ORGANIZATION }}
+          dotnetBuildArguments: InnoClinic.OfficesAPI/InnoClinic.OfficesAPI.sln --configuration Release
+          dotnetTestArguments: InnoClinic.OfficesAPI/InnoClinic.OfficesAPI.sln --no-build --configuration Release --verbosity normal --logger trx --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+          sonarBeginArguments: /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml" /d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx" /d:sonar.coverage.exclusions="**/Program.cs,**/DI/*,**/Context/*,**/Profiles/*"
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
