--- a/InnoClinic.OfficesAPI/API/API.csproj
+++ b/InnoClinic.OfficesAPI/API/API.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
   </ItemGroup>
