update tests, rename validation helper and change mongodb connection login

--- a/InnoClinic.OfficesAPI/API/appsettings.json
+++ b/InnoClinic.OfficesAPI/API/appsettings.json
@@ -27,9 +27,9 @@
         "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
     },
     "ConnectionStrings": {
-        "MongoDb": "mongodb+srv://IvanKurykin:fgEXRXEipAtlYHfm@ivankuryikin.lxhtmdr.mongodb.net/OfficeAPIDatabase?retryWrites=true&w=majority&appName=IvanKuryikin",
-        "DatabaseName": "OfficeAPIDatabase",
-        "GridFSBucketName": "photos"
+        "MongoDb": "${MONGODB_CONNECTION}",
+        "DatabaseName": "${MONGODB_DATABASE}",
+        "GridFSBucketName": "${MONGODB_GRIDFS}"
     },
     "AllowedHosts": "*"
 }
