--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: ["main"]
 
+env:
+  MONGODB_CONNECTION: ${{ secrets.MONGODB_CONNECTION }}
+  MONGODB_DATABASE: ${{ secrets.MONGODB_DATABASE }}
+  MONGODB_GRIDFS: ${{ secrets.MONGODB_GRIDFS }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -45,3 +50,6 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          MONGODB_CONNECTION: ${{ secrets.MONGODB_CONNECTION }}
+          MONGODB_DATABASE: ${{ secrets.MONGODB_DATABASE }}
+          MONGODB_GRIDFS: ${{ secrets.MONGODB_GRIDFS }}
